# qasm2python

./: .gitignore  LICENSE  README.md  changed_files.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
qasm2python/: __init__.py  adapter.py
tests/: test_converter.py
