[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qasm2python"
version = "0.1.1"
description = "Convert OpenQASM 3 to Python Qiskit code dynamically."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Muyleang Ing", email = "muyleanging@gmail.com" }
]

maintainers = [
  { name = "Muyleang Ing", email = "muyleanging@gmail.com" }
]

keywords = [
  "quantum",
  "qiskit",
  "openqasm",
  "compiler",
  "transpiler",
  "quantum computing"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "qiskit>=0.45"
]

[project.urls]
Homepage = "https://muyleanging.com"
Repository = "https://github.com/muyleanging/qasm2python"
Documentation = "https://github.com/muyleanging/qasm2python#readme"
Issues = "https://github.com/muyleanging/qasm2python/issues"
